proxy-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: github-proxy
  name: github-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: githubd-proxy
  template:
    metadata:
      labels:
        app: github-proxy
    spec:
      containers:
      - args:
        - --cookie-secure=false
        - --provider=github
        - --upstream=http://isitup.default.svc.cluster.local
        - --http-address=0.0.0.0:8080
        - --redirect-url=https://github.isitup.gbeksbaby.com/oauth2/callback
        - --email-domain=*
        - --github-org=gbeksbaby.com
        - --pass-basic-auth=false
        - --pass-access-token=false
        image: a5huynh/oauth2_proxy:2.2
        name: oauth-proxy
        ports:
        - containerPort: 8080
          protocol: TCP
