proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: github-proxy
  name: github-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: github-proxy
  type: ClusterIP
---
